--- a/01-create_pu_classifier.ipynb
+++ b/01-create_pu_classifier.ipynb
@@ -91,10 +91,9 @@
      "text": [
       "region  label     \n",
       "NAm     positive      217\n",
-      "        unlabelled     85\n",
+      "        unlabelled    183\n",
       "SAm     positive      130\n",
-      "        unlabelled     67\n",
-      "other   unlabelled    195\n",
+      "        unlabelled    164\n",
       "dtype: int64\n"
      ]
     }
@@ -104,6 +103,9 @@
     "\n",
     "# Drop negatively-labelled samples\n",
     "data = data[data[\"label\"] != \"negative\"]\n",
+    "\n",
+    "# Restrict unlabelled training data to the Americas\n",
+    "data = data[data[\"region\"].isin({\"NAm\", \"SAm\"})]\n",
     "\n",
     "# Equal number of positive and unlabelled samples\n",
     "data = downsample_unlabelled(data, random_state=random_seed)\n",
@@ -120,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(620, 25) (620,)\n"
+      "(633, 25) (633,)\n"
      ]
     }
    ],
