Add more figure notebooks

--- a/03-create_probability_animation.ipynb
+++ b/03-create_probability_animation.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probability maps animation\n",
+    "\n",
+    "This notebook creates an animation showing the evolution of the predicted time-dependent deposit probability from 170Ma-present."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
