Add documentation to figure notebooks

--- a/Fig-04-feature_importance.ipynb
+++ b/Fig-04-feature_importance.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 4: Feature importance\n",
+    "\n",
+    "This notebook reproduces Figure 4. It also includes boxplots showing the distributions of the most importance features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,85 +30,37 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load PU classifier and training data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['present_lon', 'present_lat', 'age (Ma)', 'label', 'plate_id', 'lon',\n",
-       "       'lat', 'overriding_plate_id', 'source',\n",
-       "       'trench_velocity_obliquity (degrees)', 'seafloor_age (Ma)',\n",
-       "       'distance_to_trench_edge (degrees)', 'trench_normal_angle (degrees)',\n",
-       "       'trench_velocity_orthogonal (cm/yr)', 'subducting_plate_ID',\n",
-       "       'subducted_carbonates_volume (m)', 'trench_velocity (cm/yr)',\n",
-       "       'subducted_water_volume (m)',\n",
-       "       'subducting_plate_absolute_obliquity (degrees)',\n",
-       "       'convergence_obliquity (degrees)', 'co2_volume (m^3/m^2)',\n",
-       "       'subducted_sediment_volume (m)', 'convergence_rate (cm/yr)',\n",
-       "       'sediment_thickness (m)', 'trench_plate_ID', 'carbonate_thickness (m)',\n",
-       "       'distance_from_trench_start (degrees)',\n",
-       "       'convergence_rate_orthogonal (cm/yr)',\n",
-       "       'subducting_plate_absolute_velocity_orthogonal (cm/yr)',\n",
-       "       'subducting_plate_absolute_velocity_parallel (cm/yr)',\n",
-       "       'subducted_plate_volume (m)', 'convergence_rate_parallel (cm/yr)',\n",
-       "       'subducting_plate_absolute_velocity (cm/yr)',\n",
-       "       'arc_segment_length (degrees)', 'seafloor_spreading_rate (km/Myr)',\n",
-       "       'trench_velocity_parallel (cm/yr)', 'distance_to_trench (km)',\n",
-       "       'water_thickness (m)', 'slab_flux (m^2/yr)',\n",
-       "       'crustal_thickness_mean (m)', 'crustal_thickness_min (m)',\n",
-       "       'crustal_thickness_max (m)', 'crustal_thickness_median (m)',\n",
-       "       'crustal_thickness_std (m)', 'crustal_thickness_n',\n",
-       "       'crustal_thickness_range (m)', 'magnetic_anomaly_mean (nT)',\n",
-       "       'magnetic_anomaly_min (nT)', 'magnetic_anomaly_max (nT)',\n",
-       "       'magnetic_anomaly_median (nT)', 'magnetic_anomaly_std (nT)',\n",
-       "       'magnetic_anomaly_n', 'magnetic_anomaly_range (nT)',\n",
-       "       'slab_dip (degrees)', 'arc_trench_distance (km)',\n",
-       "       'total_precipitation (km)', 'total_convergence (km)', 'region'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "classifier_filename = \"outputs/pu_classifier.joblib\"\n",
     "training_filename = \"training_data.csv\"\n",
     "\n",
     "classifier = load(classifier_filename)\n",
-    "df_training = pd.read_csv(training_filename)\n",
-    "\n",
-    "df_training.columns"
+    "df_training = pd.read_csv(training_filename)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate feature importance"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importance_array = np.array(\n",
-    "    [\n",
-    "        i.feature_importances_\n",
-    "        for i in classifier.estimators_\n",
-    "    ]\n",
-    ").mean(axis=0)\n",
-    "\n",
-    "to_drop = COLUMNS_TO_DROP | CORRELATED_COLUMNS | PRESERVATION_COLUMNS\n",
-    "to_drop.add(\"label\")\n",
-    "\n",
-    "feature_names = sorted(set(df_training.columns).difference(to_drop))\n",
-    "feature_names = np.array(feature_names, dtype=\"object\")\n",
-    "\n",
-    "importances = pd.Series(importance_array, index=feature_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -312,12 +274,27 @@
        "magnetic_anomaly_mean (nT)                                       0.081363  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "importance_array = np.array(\n",
+    "    [\n",
+    "        i.feature_importances_\n",
+    "        for i in classifier.estimators_\n",
+    "    ]\n",
+    ").mean(axis=0)\n",
+    "\n",
+    "to_drop = COLUMNS_TO_DROP | CORRELATED_COLUMNS | PRESERVATION_COLUMNS\n",
+    "to_drop.add(\"label\")\n",
+    "\n",
+    "feature_names = sorted(set(df_training.columns).difference(to_drop))\n",
+    "feature_names = np.array(feature_names, dtype=\"object\")\n",
+    "\n",
+    "importances = pd.Series(importance_array, index=feature_names)\n",
+    "\n",
     "pd.DataFrame(\n",
     "    {\n",
     "        \"importance (absolute)\": importances,\n",
@@ -327,18 +304,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot feature importances (bar chart)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# normalise = False\n",
-    "normalise = True\n",
-    "\n",
-    "num_to_keep = 6\n",
-    "# num_to_keep = None\n",
-    "if num_to_keep is None:\n",
-    "    num_to_keep = importances.size\n",
+    "normalise = True  # show relative importance values\n",
+    "num_to_keep = 6  # show 6 most important features\n",
     "\n",
     "importances_sorted = importances.sort_values(ascending=False)\n",
     "if normalise:\n",
@@ -347,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +392,51 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot important feature distributions (box plots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean values:\n",
+      "crustal_thickness_mean (m) - positive = 46594.02, random = 35969.5\n",
+      "distance_to_trench (km) - positive = 415.95, random = 270.8\n",
+      "convergence_rate_orthogonal (cm/yr) - positive = 9.02, random = 4.87\n",
+      "trench_velocity_orthogonal (cm/yr) - positive = -2.2, random = -0.87\n",
+      "seafloor_spreading_rate (km/Myr) - positive = 118.21, random = 84.39\n",
+      "subducted_carbonates_volume (m) - positive = 339.85, random = 158.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_boxplots = df_training.copy()\n",
+    "positive_boxplots = df_boxplots[\n",
+    "    (df_boxplots[\"source\"] == \"Diaz-Rodriguez et al. 2021\")\n",
+    "    & (df_boxplots[\"label\"] == \"positive\")\n",
+    "]\n",
+    "random_boxplots = df_boxplots[\n",
+    "    (df_boxplots[\"source\"] == \"random\")\n",
+    "    & (df_boxplots[\"label\"].isin((\"unlabelled\", \"unlabeled\")))\n",
+    "]\n",
+    "\n",
+    "print(\"Mean values:\")\n",
+    "for column in importances_sorted.iloc[:num_to_keep].index:\n",
+    "    a = np.around(positive_boxplots[column].mean(), 2)\n",
+    "    b = np.around(random_boxplots[column].mean(), 2)\n",
+    "    print(\"{} - positive = {}, random = {}\".format(column, a, b))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -429,17 +454,6 @@
    ],
    "source": [
     "marker_colour = \"grey\"\n",
-    "\n",
-    "df_boxplots = df_training.copy()\n",
-    "positive_boxplots = df_boxplots[\n",
-    "    (df_boxplots[\"source\"] == \"Diaz-Rodriguez et al. 2021\")\n",
-    "    & (df_boxplots[\"label\"] == \"positive\")\n",
-    "]\n",
-    "random_boxplots = df_boxplots[\n",
-    "    (df_boxplots[\"source\"] == \"random\")\n",
-    "    & (df_boxplots[\"label\"].isin((\"unlabelled\", \"unlabeled\")))\n",
-    "]\n",
-    "\n",
     "positions = np.array((0, 0.5))\n",
     "xlims = positions + np.array((-0.3, 0.3))\n",
     "\n",
@@ -474,7 +488,6 @@
     "        medianprops=dict(\n",
     "            color=\"red\",\n",
     "            linewidth=1.5,\n",
-    "            # zorder=100,\n",
     "        ),\n",
     "        showfliers=False,\n",
     "        showmeans=True,\n",
@@ -491,33 +504,6 @@
     "        dpi=350,\n",
     "        bbox_inches=\"tight\",\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean values:\n",
-      "crustal_thickness_mean (m) - positive = 46594.02, random = 35969.5\n",
-      "distance_to_trench (km) - positive = 415.95, random = 270.8\n",
-      "convergence_rate_orthogonal (cm/yr) - positive = 9.02, random = 4.87\n",
-      "trench_velocity_orthogonal (cm/yr) - positive = -2.2, random = -0.87\n",
-      "seafloor_spreading_rate (km/Myr) - positive = 118.21, random = 84.39\n",
-      "subducted_carbonates_volume (m) - positive = 339.85, random = 158.01\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Mean values:\")\n",
-    "for column in importances_sorted.iloc[:num_to_keep].index:\n",
-    "    a = np.around(positive_boxplots[column].mean(), 2)\n",
-    "    b = np.around(random_boxplots[column].mean(), 2)\n",
-    "    print(\"{} - positive = {}, random = {}\".format(column, a, b))"
    ]
   },
   {
