Add grid points notebook

--- a/00a-extract_training_data.ipynb
+++ b/00a-extract_training_data.ipynb
@@ -52,11 +52,9 @@
     "\n",
     "n_jobs = 8\n",
     "times = range(171)\n",
-    "\n",
-    "num_unlabelled = 200  # per timestep\n",
-    "\n",
     "verbose = False\n",
-    "run_all = True"
+    "\n",
+    "num_unlabelled = 200  # per timestep"
    ]
   },
   {
@@ -93,10 +91,9 @@
     ")\n",
     "\n",
     "output_dir = \"outputs\"\n",
-    "subduction_kinematics_dir = os.path.join(output_dir, \"subduction_kinematics\")\n",
+    "subduction_data_filename = os.path.join(output_dir, \"subducting_plate_data.csv\")\n",
     "study_area_dir = os.path.join(output_dir, \"study_area_polygons\")\n",
     "output_filename = os.path.join(output_dir, \"training_data.csv\")\n",
-    "\n",
     "\n",
     "feature_filenames = glob.glob(\n",
     "    os.path.join(\n",
@@ -132,51 +129,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = False\n",
+    "with tempfile.TemporaryDirectory() as subduction_kinematics_dir:\n",
+    "    run_calculate_convergence(\n",
+    "        nprocs=n_jobs,\n",
+    "        min_time=min(times),\n",
+    "        max_time=max(times),\n",
+    "        topology_filenames=feature_filenames,\n",
+    "        rotation_filenames=rotation_filenames,\n",
+    "        output_dir=subduction_kinematics_dir,\n",
+    "        verbose=verbose,\n",
+    "    )\n",
     "\n",
-    "if run or run_all:\n",
-    "    with tempfile.TemporaryDirectory() as subduction_kinematics_dir:\n",
-    "        run_calculate_convergence(\n",
-    "            nprocs=n_jobs,\n",
-    "            min_time=min(times),\n",
-    "            max_time=max(times),\n",
-    "            topology_filenames=feature_filenames,\n",
-    "            rotation_filenames=rotation_filenames,\n",
-    "            output_dir=subduction_kinematics_dir,\n",
-    "            verbose=verbose,\n",
-    "        )\n",
-    "\n",
-    "        subduction_data = run_coregister_ocean_rasters(\n",
-    "            nprocs=n_jobs,\n",
-    "            times=times,\n",
-    "            input_data=subduction_kinematics_dir,\n",
-    "            agegrid_dir=agegrid_dir,\n",
-    "            topology_features=feature_filenames,\n",
-    "            rotation_model=rotation_filenames,\n",
-    "            sedthick_dir=sedthick_dir,\n",
-    "            carbonate_dir=carbonate_dir,\n",
-    "            co2_dir=co2_dir,\n",
-    "            subducted_thickness_dir=os.path.join(\n",
-    "                subducted_quantities_dir,\n",
-    "                \"plate_thickness\",\n",
-    "            ),\n",
-    "            subducted_sediments_dir=os.path.join(\n",
-    "                subducted_quantities_dir,\n",
-    "                \"sediment_thickness\",\n",
-    "            ),\n",
-    "            subducted_carbonates_dir=os.path.join(\n",
-    "                subducted_quantities_dir,\n",
-    "                \"carbonate_thickness\",\n",
-    "            ),\n",
-    "            subducted_water_dir=os.path.join(\n",
-    "                subducted_quantities_dir,\n",
-    "                \"water_thickness\",\n",
-    "            ),\n",
-    "            verbose=verbose,\n",
-    "            combined_filename=os.path.join(output_dir, \"tmp_subducting_plate_data.csv\"),\n",
-    "        )\n",
-    "else:\n",
-    "    subduction_data = pd.read_csv(os.path.join(output_dir, \"tmp_subducting_plate_data.csv\"))\n",
+    "    subduction_data = run_coregister_ocean_rasters(\n",
+    "        nprocs=n_jobs,\n",
+    "        times=times,\n",
+    "        input_data=subduction_kinematics_dir,\n",
+    "        agegrid_dir=agegrid_dir,\n",
+    "        topology_features=feature_filenames,\n",
+    "        rotation_model=rotation_filenames,\n",
+    "        sedthick_dir=sedthick_dir,\n",
+    "        carbonate_dir=carbonate_dir,\n",
+    "        co2_dir=co2_dir,\n",
+    "        subducted_thickness_dir=os.path.join(\n",
+    "            subducted_quantities_dir,\n",
+    "            \"plate_thickness\",\n",
+    "        ),\n",
+    "        subducted_sediments_dir=os.path.join(\n",
+    "            subducted_quantities_dir,\n",
+    "            \"sediment_thickness\",\n",
+    "        ),\n",
+    "        subducted_carbonates_dir=os.path.join(\n",
+    "            subducted_quantities_dir,\n",
+    "            \"carbonate_thickness\",\n",
+    "        ),\n",
+    "        subducted_water_dir=os.path.join(\n",
+    "            subducted_quantities_dir,\n",
+    "            \"water_thickness\",\n",
+    "        ),\n",
+    "        verbose=verbose,\n",
+    "        combined_filename=subduction_data_filename,\n",
+    "    )\n",
     "subduction_data[\"plate_thickness (m)\"] = plate_isotherm_depth(\n",
     "    subduction_data[\"seafloor_age (Ma)\"],\n",
     "    maxiter=100,\n",
@@ -200,18 +192,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = False\n",
-    "\n",
-    "if run or run_all:\n",
-    "    run_create_study_area_polygons(\n",
-    "        nprocs=n_jobs,\n",
-    "        times=times,\n",
-    "        topological_features=feature_filenames,\n",
-    "        rotation_model=rotation_filenames,\n",
-    "        output_dir=study_area_dir,\n",
-    "        verbose=verbose,\n",
-    "        return_output=False,\n",
-    "    )"
+    "run_create_study_area_polygons(\n",
+    "    nprocs=n_jobs,\n",
+    "    times=times,\n",
+    "    topological_features=feature_filenames,\n",
+    "    rotation_model=rotation_filenames,\n",
+    "    output_dir=study_area_dir,\n",
+    "    verbose=verbose,\n",
+    "    return_output=False,\n",
+    ")"
    ]
   },
   {
@@ -228,22 +217,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = False\n",
-    "\n",
-    "if run or run_all:\n",
-    "    unlabelled = generate_unlabelled_points(\n",
-    "        times=times,\n",
-    "        input_dir=study_area_dir,\n",
-    "        num=num_unlabelled,\n",
-    "        threads=n_jobs,\n",
-    "        seed=random_seed,\n",
-    "        topological_features=feature_filenames,\n",
-    "        rotation_model=rotation_filenames,\n",
-    "        output_filename=os.path.join(output_dir, \"unlabelled_points_test.csv\"),\n",
-    "        verbose=verbose,\n",
-    "    )\n",
-    "else:\n",
-    "    unlabelled = pd.read_csv(os.path.join(output_dir, \"unlabelled_points_test.csv\"))"
+    "unlabelled = generate_unlabelled_points(\n",
+    "    times=times,\n",
+    "    input_dir=study_area_dir,\n",
+    "    num=num_unlabelled,\n",
+    "    threads=n_jobs,\n",
+    "    seed=random_seed,\n",
+    "    topological_features=feature_filenames,\n",
+    "    rotation_model=rotation_filenames,\n",
+    "    verbose=verbose,\n",
+    ")"
    ]
   },
   {
@@ -260,26 +243,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = False\n",
-    "\n",
-    "if run or run_all:\n",
-    "    combined_points = combine_point_data(\n",
-    "        deposit_data=deposits_filename,\n",
-    "        unlabelled_data=unlabelled,\n",
-    "        static_polygons=static_polygons_filename,\n",
-    "        topological_features=feature_filenames,\n",
-    "        rotation_model=rotation_filenames,\n",
-    "        study_area_dir=study_area_dir,\n",
-    "        min_time=min(times),\n",
-    "        max_time=max(times),\n",
-    "        n_jobs=n_jobs,\n",
-    "        verbose=verbose,\n",
-    "        output_filename=os.path.join(output_dir, \"tmp_combined_points.csv\"),\n",
-    "    )\n",
-    "else:\n",
-    "    combined_points = pd.read_csv(\n",
-    "        os.path.join(output_dir, \"tmp_combined_points.csv\")\n",
-    "    )"
+    "combined_points = combine_point_data(\n",
+    "    deposit_data=deposits_filename,\n",
+    "    unlabelled_data=unlabelled,\n",
+    "    static_polygons=static_polygons_filename,\n",
+    "    topological_features=feature_filenames,\n",
+    "    rotation_model=rotation_filenames,\n",
+    "    study_area_dir=study_area_dir,\n",
+    "    min_time=min(times),\n",
+    "    max_time=max(times),\n",
+    "    n_jobs=n_jobs,\n",
+    "    verbose=verbose,\n",
+    ")"
    ]
   },
   {
@@ -296,20 +271,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = False\n",
-    "\n",
-    "if run or run_all:\n",
-    "    coregistered_data = run_coregister_combined_point_data(\n",
-    "        point_data=combined_points,\n",
-    "        subduction_data=subduction_data,\n",
-    "        n_jobs=n_jobs,\n",
-    "        verbose=verbose,\n",
-    "        output_filename=os.path.join(output_dir, \"tmp_coregistered_points.csv\"),\n",
-    "    )\n",
-    "else:\n",
-    "    coregistered_data = pd.read_csv(\n",
-    "        os.path.join(output_dir, \"tmp_coregistered_points.csv\")\n",
-    "    )"
+    "coregistered_data = run_coregister_combined_point_data(\n",
+    "    point_data=combined_points,\n",
+    "    subduction_data=subduction_data,\n",
+    "    n_jobs=n_jobs,\n",
+    "    verbose=verbose,\n",
+    ")"
    ]
   },
   {
@@ -326,23 +293,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run = False\n",
-    "\n",
-    "if run or run_all:\n",
-    "    coregistered_data = run_coregister_crustal_thickness(\n",
-    "        point_data=coregistered_data,\n",
-    "        input_dir=crustal_thickness_dir,\n",
-    "        n_jobs=n_jobs,\n",
-    "        verbose=verbose,\n",
-    "    )\n",
-    "    coregistered_data = coregister_magnetic(\n",
-    "        data=coregistered_data,\n",
-    "        filename=mag_anomaly_filename,\n",
-    "        n_jobs=n_jobs,\n",
-    "    )\n",
-    "    coregistered_data.to_csv(output_filename, index=False)\n",
-    "else:\n",
-    "    coregistered_data = pd.read_csv(output_filename)"
+    "coregistered_data = run_coregister_crustal_thickness(\n",
+    "    point_data=coregistered_data,\n",
+    "    input_dir=crustal_thickness_dir,\n",
+    "    n_jobs=n_jobs,\n",
+    "    verbose=verbose,\n",
+    ")\n",
+    "coregistered_data = coregister_magnetic(\n",
+    "    data=coregistered_data,\n",
+    "    filename=mag_anomaly_filename,\n",
+    "    n_jobs=n_jobs,\n",
+    ")\n",
+    "coregistered_data.to_csv(output_filename, index=False)"
    ]
   },
   {
