Fetch files from Zenodo

--- a/00a-extract_training_data.ipynb
+++ b/00a-extract_training_data.ipynb
@@ -19,10 +19,13 @@
     "import tempfile\n",
     "import warnings\n",
     "\n",
-    "import pandas as pd\n",
     "from gplately.tools import plate_isotherm_depth\n",
     "\n",
     "from lib.calculate_convergence import run_calculate_convergence\n",
+    "from lib.check_files import (\n",
+    "    check_source_data,\n",
+    "    check_plate_model,\n",
+    ")\n",
     "from lib.combine_point_data import combine_point_data\n",
     "from lib.coregister_combined_point_data import run_coregister_combined_point_data\n",
     "from lib.coregister_crustal_thickness import run_coregister_crustal_thickness\n",
@@ -71,9 +74,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = \"EarthBytePlateMotionModel-ARCHIVE/Global_Model_WD_Internal_Release_2019_v2_Clennett_NE_Pacific\"\n",
+    "model_dir = \"plate_model\"\n",
+    "check_plate_model(model_dir, verbose=verbose)\n",
     "\n",
     "data_dir = \"data\"\n",
+    "check_source_data(data_dir, verbose=verbose)\n",
     "deposits_filename = os.path.join(data_dir, \"deposit_data.csv\")\n",
     "agegrid_dir = os.path.join(data_dir, \"AgeGrids\")\n",
     "sedthick_dir = os.path.join(data_dir, \"SedimentThickness\")\n",
@@ -91,6 +96,7 @@
     ")\n",
     "\n",
     "output_dir = \"outputs\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
     "subduction_data_filename = os.path.join(output_dir, \"subducting_plate_data.csv\")\n",
     "study_area_dir = os.path.join(output_dir, \"study_area_polygons\")\n",
     "output_filename = os.path.join(output_dir, \"training_data.csv\")\n",
