--- a/01-create_pu_classifier.ipynb
+++ b/01-create_pu_classifier.ipynb
@@ -26,12 +26,12 @@
     "import pprint\n",
     "import warnings\n",
     "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from joblib import dump\n",
     "from pulearn.bagging import BaggingPuClassifier\n",
     "from sklearn.base import clone\n",
     "\n",
+    "from lib.check_files import check_prepared_data\n",
     "from lib.pu import (\n",
     "    BASE_MODELS,\n",
     "    downsample_unlabelled,\n",
@@ -64,11 +64,12 @@
    "outputs": [],
    "source": [
     "# Input/output files\n",
+    "data_dir = \"prepared_data\"\n",
+    "check_prepared_data(data_dir, verbose=True)\n",
+    "data_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "\n",
-    "data_filename = \"training_data.csv\"\n",
     "output_dir = \"outputs\"\n",
-    "if not os.path.isdir(output_dir):\n",
-    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
     "output_filename = os.path.join(output_dir, \"pu_classifier.joblib\")"
    ]
   },
