--- a/01a-create_svm_classifier.ipynb
+++ b/01a-create_svm_classifier.ipynb
@@ -16,14 +16,12 @@
    "source": [
     "import os\n",
     "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from joblib import dump\n",
     "from sklearn.svm import SVC\n",
     "\n",
-    "from lib.pu import (\n",
-    "    get_xy,\n",
-    ")\n"
+    "from lib.check_files import check_prepared_data\n",
+    "from lib.pu import get_xy"
    ]
   },
   {
@@ -43,11 +41,12 @@
    "outputs": [],
    "source": [
     "# Input/output files\n",
+    "data_dir = \"prepared_data\"\n",
+    "check_prepared_data(data_dir, verbose=True)\n",
+    "data_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "\n",
-    "data_filename = \"training_data.csv\"\n",
     "output_dir = \"outputs\"\n",
-    "if not os.path.isdir(output_dir):\n",
-    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
     "output_filename = os.path.join(output_dir, \"svm_classifier.joblib\")"
    ]
   },
