--- a/01b-cross_validation.ipynb
+++ b/01b-cross_validation.ipynb
@@ -22,6 +22,7 @@
     }
    ],
    "source": [
+    "import os\n",
     "import warnings\n",
     "\n",
     "from matplotlib.colors import to_rgba\n",
@@ -43,6 +44,7 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.svm import SVC\n",
     "\n",
+    "from lib.check_files import check_prepared_data\n",
     "from lib.cv import perform_cv\n",
     "from lib.pu import (\n",
     "    BASE_MODELS,\n",
@@ -98,7 +100,9 @@
     }
    ],
    "source": [
-    "data_filename = \"training_data.csv\"\n",
+    "data_dir = \"prepared_data\"\n",
+    "check_prepared_data(data_dir, verbose=True)\n",
+    "data_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "data = pd.read_csv(data_filename)\n",
     "\n",
     "# Restrict unlabelled training data to the Americas\n",
