--- a/02-create_probability_maps.ipynb
+++ b/02-create_probability_maps.ipynb
@@ -21,13 +21,13 @@
     "import pandas as pd\n",
     "from joblib import load\n",
     "\n",
+    "from lib.check_files import check_prepared_data\n",
     "from lib.pu import (\n",
     "    calculate_probabilities,\n",
     "    create_probability_grids,\n",
     "    COLUMNS_TO_DROP,\n",
     "    CORRELATED_COLUMNS,\n",
     "    PRESERVATION_COLUMNS,\n",
-    "    CUMULATIVE_COLUMNS,\n",
     ")\n",
     "\n",
     "columns_to_drop = COLUMNS_TO_DROP | CORRELATED_COLUMNS | PRESERVATION_COLUMNS\n",
@@ -56,20 +56,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier_filename = \"outputs/pu_classifier.joblib\"\n",
+    "output_dir = \"outputs\"\n",
+    "classifier_filename = os.path.join(output_dir, \"pu_classifier.joblib\")\n",
     "classifier = load(classifier_filename)\n",
     "\n",
-    "data_filename = \"grid_data.csv.zip\"\n",
-    "if os.path.isfile(\n",
-    "    os.path.join(\n",
-    "        \"outputs\",\n",
-    "        data_filename,\n",
-    "    )\n",
-    "):\n",
-    "    data_filename = os.path.join(\n",
-    "        \"outputs\",\n",
-    "        data_filename,\n",
-    "    )\n",
+    "data_dir = \"prepared_data\"\n",
+    "check_prepared_data(data_dir, verbose=True)\n",
+    "data_filename = os.path.join(data_dir, \"grid_data.csv.zip\")\n",
     "point_data = pd.read_csv(data_filename)"
    ]
   },
