--- a/03-create_probability_animation.ipynb
+++ b/03-create_probability_animation.ipynb
@@ -29,7 +29,14 @@
     "from joblib import Parallel, delayed\n",
     "from moviepy.video.io.ImageSequenceClip import ImageSequenceClip\n",
     "\n",
-    "from lib.visualisation import plot"
+    "from lib.check_files import (\n",
+    "    check_plate_model,\n",
+    "    check_prepared_data,\n",
+    ")\n",
+    "from lib.visualisation import plot\n",
+    "\n",
+    "# Suppress occasional joblib warnings\n",
+    "%env PYTHONWARNINGS=ignore::UserWarning"
    ]
   },
   {
@@ -46,10 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_dir = os.path.join(\n",
-    "    \"EarthBytePlateMotionModel-ARCHIVE\",\n",
-    "    \"Global_Model_WD_Internal_Release_2019_v2_Clennett_NE_Pacific\",\n",
-    ")\n",
+    "model_dir = \"plate_model\"\n",
+    "check_plate_model(model_dir, verbose=True)\n",
     "feature_filenames = glob.glob(\n",
     "    os.path.join(\n",
     "        model_dir,\n",
@@ -93,7 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_filename = \"training_data.csv\"\n",
+    "data_dir = \"prepared_data\"\n",
+    "check_prepared_data(data_dir, verbose=True)\n",
+    "training_filename = os.path.join(data_dir, \"training_data.csv\")\n",
     "training_data = pd.read_csv(training_filename)\n",
     "positives = training_data[training_data[\"label\"] == \"positive\"]"
    ]
@@ -120,7 +127,8 @@
     }
    ],
    "source": [
-    "probs_dir = os.path.join(\"outputs\", \"grids\")\n",
+    "output_dir = \"outputs\"\n",
+    "probs_dir = os.path.join(output_dir, \"grids\")\n",
     "print(len(os.listdir(probs_dir)))"
    ]
   },
@@ -214,7 +222,7 @@
    "source": [
     "times = range(171)\n",
     "n_jobs = 8\n",
-    "output_filename = os.path.join(\"outputs\", \"probability_animation.mp4\")\n",
+    "output_filename = os.path.join(output_dir, \"probability_animation.mp4\")\n",
     "\n",
     "gplot_kw = dict(\n",
     "    rotation_model=rotation_filenames,\n",
