Use Zenodo files in notebooks

--- a/00a-extract_training_data.ipynb
+++ b/00a-extract_training_data.ipynb
@@ -77,7 +77,7 @@
     "model_dir = \"plate_model\"\n",
     "check_plate_model(model_dir, verbose=verbose)\n",
     "\n",
-    "data_dir = \"data\"\n",
+    "data_dir = \"source_data\"\n",
     "check_source_data(data_dir, verbose=verbose)\n",
     "deposits_filename = os.path.join(data_dir, \"deposit_data.csv\")\n",
     "agegrid_dir = os.path.join(data_dir, \"AgeGrids\")\n",
