--- a/02-create_probability_maps.ipynb
+++ b/02-create_probability_maps.ipynb
@@ -89,7 +89,7 @@
     ")\n",
     "for i in (\"lon\", \"lat\"):\n",
     "    probabilities[f\"present_{i}\"] = point_data[f\"present_{i}\"]\n",
-    "probabilities.to_csv(os.path.join(\"outputs\", \"grid_probabilities.csv.zip\"), index=False)"
+    "probabilities.to_csv(os.path.join(output_dir, \"grid_probabilities.csv.zip\"), index=False)"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "n_jobs = 8\n",
-    "grid_output_dir = os.path.join(\"outputs\", \"grids\")\n",
+    "grid_output_dir = os.path.join(output_dir, \"grids\")\n",
     "os.makedirs(grid_output_dir, exist_ok=True)\n",
     "\n",
     "create_probability_grids(\n",
