--- a/03-create_probability_animation.ipynb
+++ b/03-create_probability_animation.ipynb
@@ -241,7 +241,7 @@
     "        delayed(plot)(\n",
     "            gplot=gplot_kw,\n",
     "            probabilities=os.path.join(\n",
-    "                \"outputs\",\n",
+    "                output_dir,\n",
     "                \"grids\",\n",
     "                f\"probability_grid_{t}Ma.nc\",\n",
     "            ),\n",
