--- a/Fig-03-time_dependent_present_day_probabilities.ipynb
+++ b/Fig-03-time_dependent_present_day_probabilities.ipynb
@@ -25,7 +25,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib.lines import Line2D\n",
-    "from matplotlib.patches import Ellipse"
+    "from matplotlib.patches import Ellipse\n",
+    "\n",
+    "from lib.check_files import (\n",
+    "    check_plate_model,\n",
+    "    check_prepared_data,\n",
+    ")"
    ]
   },
   {
@@ -42,17 +47,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = os.path.join(\"outputs\", \"figures\")\n",
+    "data_dir = \"prepared_data\"\n",
+    "check_prepared_data(data_dir)\n",
+    "model_dir = \"plate_model\"\n",
+    "check_plate_model(model_dir)\n",
+    "\n",
+    "output_dir = os.path.join(\"figures\")\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "input_filename = os.path.join(\"outputs\", \"grid_probabilities.csv.zip\")\n",
     "coastlines_filename = os.path.join(\n",
-    "    \"EarthBytePlateMotionModel-ARCHIVE\",\n",
-    "    \"Global_Model_WD_Internal_Release_2019_v2_Clennett_NE_Pacific\",\n",
+    "    model_dir,\n",
     "    \"StaticGeometries\",\n",
     "    \"Coastlines\",\n",
     "    \"Global_coastlines_low_res.shp\",\n",
     ")\n",
-    "training_filename = \"training_data.csv\""
+    "training_filename = os.path.join(data_dir, \"training_data.csv\")"
    ]
   },
   {
