--- a/Fig-04-feature_importance.ipynb
+++ b/Fig-04-feature_importance.ipynb
@@ -16,11 +16,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from joblib import load\n",
     "\n",
+    "from lib.check_files import (\n",
+    "    check_prepared_data,\n",
+    ")\n",
     "from lib.format_feature_names import format_feature_name\n",
     "from lib.pu import (\n",
     "    COLUMNS_TO_DROP,\n",
@@ -43,11 +48,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier_filename = \"outputs/pu_classifier.joblib\"\n",
-    "training_filename = \"training_data.csv\"\n",
+    "data_dir = \"prepared_data\"\n",
+    "check_prepared_data(data_dir)\n",
+    "training_filename = os.path.join(data_dir, \"training_data.csv\")\n",
+    "\n",
+    "classifier_filename = os.path.join(\"outputs\", \"pu_classifier.joblib\")\n",
+    "\n",
+    "output_dir = \"figures\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "classifier = load(classifier_filename)\n",
-    "df_training = pd.read_csv(training_filename)"
+    "df_training = pd.read_csv(training_filename)\n",
+    "importances_basename = os.path.join(output_dir, \"feature_importances\")\n",
+    "boxplots_filename = os.path.join(output_dir, \"feature_boxplots\")"
    ]
   },
   {
@@ -384,8 +397,9 @@
     "ax.set_title(title, fontsize=title_size)\n",
     "\n",
     "for extension in (\".png\", \".pdf\"):\n",
+    "    output_filename = importances_basename + extension\n",
     "    fig.savefig(\n",
-    "        \"outputs/figures/feature_importances\" + extension,\n",
+    "        output_filename,\n",
     "        dpi=350,\n",
     "        bbox_inches=\"tight\",\n",
     "    )"
@@ -499,8 +513,9 @@
     "    ax.grid(linestyle=\"dashed\", color=\"grey\", alpha=0.5, axis=\"y\")\n",
     "\n",
     "for ext in (\".png\", \".pdf\"):\n",
+    "    output_filename = boxplots_filename + ext\n",
     "    fig.savefig(\n",
-    "        \"outputs/figures/feature_boxplots\" + ext,\n",
+    "        output_filename,\n",
     "        dpi=350,\n",
     "        bbox_inches=\"tight\",\n",
     "    )"
