--- a/Fig-05-partial_dependence.ipynb
+++ b/Fig-05-partial_dependence.ipynb
@@ -38,6 +38,9 @@
     ")\n",
     "from sklearn.inspection import PartialDependenceDisplay\n",
     "\n",
+    "from lib.check_files import (\n",
+    "    check_prepared_data,\n",
+    ")\n",
     "from lib.partial_dependence import (\n",
     "    adjust_plot,\n",
     "    get_display_kw,\n",
@@ -68,9 +71,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifier_filename = \"outputs/pu_classifier.joblib\"\n",
-    "training_filename = \"training_data.csv\"\n",
-    "pd_filename = \"outputs/partial_dependence.joblib\"\n",
+    "data_dir = \"prepared_data\"\n",
+    "check_prepared_data(data_dir)\n",
+    "input_dir = \"outputs\"\n",
+    "output_dir = \"figures\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "classifier_filename = os.path.join(input_dir, \"pu_classifier.joblib\")\n",
+    "pd_filename = os.path.join(input_dir, \"partial_dependence.joblib\")\n",
+    "\n",
+    "training_filename = os.path.join(data_dir, \"training_data.csv\")\n",
+    "\n",
+    "output_basename = os.path.join(output_dir, \"partial_dependence\")\n",
     "\n",
     "classifier = load(classifier_filename)\n",
     "df_training = pd.read_csv(training_filename)"
@@ -135,8 +147,9 @@
     "adjust_plot(axs)\n",
     "\n",
     "for ext in (\".png\", \".pdf\"):\n",
+    "    output_filename = output_basename + ext\n",
     "    fig.savefig(\n",
-    "        \"outputs/figures/partial_dependence\" + ext,\n",
+    "        output_filename,\n",
     "        dpi=350,\n",
     "        bbox_inches=\"tight\",\n",
     "    )"
