--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -63,7 +63,7 @@
     "model_dir = \"plate_model\"\n",
     "check_plate_model(model_dir, verbose=verbose)\n",
     "\n",
-    "data_dir = \"data\"\n",
+    "data_dir = \"source_data\"\n",
     "check_source_data(data_dir, verbose=verbose)\n",
     "agegrid_dir = os.path.join(data_dir, \"AgeGrids\")\n",
     "sedthick_dir = os.path.join(data_dir, \"SedimentThickness\")\n",
